# Percept

./: .gitignore  .mcp.json  .regen-worker.pid  PLUGIN.md  README.md  REGENERATE.md  instrumentation-node.ts  next.config.ts  run.sh  tribev2_colab.ipynb
.claude-plugin/: marketplace.json  plugin.json
app/: color-schemes.ts  globals.css  page.tsx
app/components/: CorticalBrain.tsx  Studio.tsx
app/lib/: regen.ts  regenPrompt.ts  studioOptimizer.ts
percept-context/: .gitignore  README.md  pyproject.toml
percept-context/examples/: quickstart.py
percept-context/src/percept_context/: __init__.py  config.py  embeddings.py  graph.py  seed.py  server.py  store.py
percept-context/tests/: test_smoke.py
pika-plugin/: .env.example  .gitignore  LICENSE  NOTICE  README.md
pika-plugin/.claude-plugin/: plugin.json
pika-plugin/.codex-plugin/: plugin.json
pika-plugin/.cursor-plugin/: plugin.json
pika-plugin/client/: cerebra_eval.py
pika-plugin/colab/: _build_notebook.py  cerebra_tribev2_server.ipynb
pika-plugin/server/: ad_score.py  engagement.py  requirements.txt  (+2 more)
pipeline/: README.md  __init__.py  app.py  cli.py  config.py  duration.py  embeddings.py  llm.py  optimizer.py  pika.py  pika_auth.py  pika_login.py  redis_store.py  requirements.txt  research.py  run-redis.sh  schema.py  seed.py  transcribe.py
test/: main.py  prompt_to_pika_prompt  run.sh  test.py  tribev2_colab.ipynb
vidgenmd/: take_1.md  take_2.md  take_3.md
worker/: app.py  engagement.py  mcp_server.py  regen-worker.mjs  requirements.txt  test_scoring.py  utils.py  vjepa_fastpath.py
(+84 files in other folders)
