[project]
name = "percept-context-plugin"
version = "0.1.0"
description = "Percept Context — a Redis-native context graph + GraphRAG engine for video-ad generation, exposed over MCP."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Percept" }]
keywords = ["redis", "redisvl", "mcp", "graphrag", "knowledge-graph", "context-graph", "vector-search", "rag", "video"]
dependencies = [
    "mcp>=1.2.0",
    "redis>=5.0.0",
    "redisvl>=0.3.0",
    "numpy>=1.24",
    "sentence-transformers>=2.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Optional LLM composition (compose_brief tool). Core graph works without it.
llm = ["anthropic>=0.40.0"]
# Optional OpenAI embeddings instead of local HF (torch-free install).
openai = ["openai>=1.0.0"]

[project.scripts]
percept-context = "percept_context.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/percept_context"]
